# traffic-light

./: .gitignore  .graphifyignore  README.md  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml
components/: __init__.py
components/copy_paste_balance/: __init__.py  _internals.py  config.py
components/copy_paste_balance/data/: __init__.py  class_weights.py
components/copy_paste_balance/gates/: __init__.py  _copy_paste_decision_schema.json  ablation_gate.py  decision_gate.py
components/copy_paste_balance/modules/: __init__.py  class_balance.py  copy_paste.py
components/copy_paste_balance/runners/: __init__.py  ablation.py
components/hard_negative_mining/: __init__.py  _internals.py  config.py
components/hard_negative_mining/data/: __init__.py  eval_manifest.py
components/hard_negative_mining/gates/: __init__.py  _hard_negative_decision_schema.json  ablation_gate.py  decision_gate.py
components/hard_negative_mining/modules/: __init__.py  miner.py  verifier.py
components/hard_negative_mining/runners/: __init__.py  ablation.py
components/hmm_smoother/: __init__.py  config.py
components/hmm_smoother/data/: __init__.py  transition_counts.py
components/hmm_smoother/gates/: __init__.py  _hmm_decision_schema.json  ablation_gate.py  decision_gate.py
components/hmm_smoother/modules/: __init__.py  inference.py  observation.py  transition.py
components/hmm_smoother/runners/: __init__.py  ablation.py
components/knowledge_distillation/: __init__.py
components/knowledge_distillation/gates/: __init__.py
components/knowledge_distillation/integration/: __init__.py  deim_kd_engine.py  deim_kd_launch.py
components/knowledge_distillation/losses/: __init__.py  cls_logit_kl.py  fdr_localization_kl.py
components/knowledge_distillation/runners/: __init__.py  a0_deim_no_golsd.py  a1_scratch.py  a2a_yolo_cls_kl.py  a2b_deim_ld_cls_kl.py  a5_mtpd_progressive.py  a6_cross_arch_pkd.py  a7_takd_l_tier.py  cross_arch_feature_kd.py  deim_baseline_golsd_off.py  deim_logit_localization_kd.py  logit_plus_feature_kd.py  pearson_feature_kd.py  progressive_multi_teacher.py  scratch_baseline.py  takd_large_teacher.py  yolo_logit_kd.py
components/knowledge_distillation/schedules/: __init__.py
components/knowledge_distillation/spikes/: __init__.py  a6_design_spike.py
components/temporal_shift_module/: __init__.py
configs/: copy_paste_balance.yaml  data_R2_class_weights.yaml  deim_hgnetv2_l_traffic_light.yml  deim_hgnetv2_m_traffic_light.yml  deim_hgnetv2_n_traffic_light.yml  deim_hgnetv2_s_traffic_light.yml  hard_negative_mining.yaml  rtdetr-l.yaml  temporal_hmm.yaml  yolo11m.yaml  yolo11n.yaml  yolo11s.yaml  yolo26l.yaml  yolo26m.yaml  yolo26n.yaml  yolo26s.yaml  yolov13s.yaml
data/: traffic_light.yaml
docs/: README.md  annotation_tool_guide.md  class_distribution.md  data_conversion_plan.md  depth_estimation_feasibility.md  development_plan.md  kd_upgrade_recommendation.md  phase_1_report.md  phase_2_round_1_report.md  ros2_integration_guide.md  timeline.md  任务计划-吴正日.xlsx
docs/_archive/: ablation_results.md  annotation_tool.md  class_distribution.md  data_conversion.md  phase_1_report.md  phase_1_results.md  pre_r2_kickoff_checklist.md  timeline.md  任务计划-吴正日.xlsx
docs/data/: annotation_tool.md  class_distribution.md  data_conversion_plan.md  r2_data_collection_sop.md
docs/integration/: ros2_contract.md  ros2_integration_guide.md  tracker.md  tracker_voting_guide.md  trt_deployment.md  trt_pipeline_guide.md  trt_quickstart.md
docs/ops/: additional_components_guide.md  report_writing_pipeline.md  scripts_reference.md  tailscale_campus_network_issue.md  tailscale_runbook.md  team_roster.md
docs/planning/: additional_components_plan.md  cross_detection_reasoning_plan.md  development_plan.md  kd_a6_design_spike.md  knowledge_distillation_pipeline.md  pre_deploy_AGV_integration.md  pre_r2_data_window_checklist.md  pre_r2_kickoff_checklist.md  temporal_optimization_plan.md  timeline.md
docs/proposals/: data_collection_and_ai_adoption.md  depth_estimation_feasibility.md  external_contribution_research.md  temporal_encoder_feasibility.md  yolo26_alternatives_survey.md
docs/reports/: ablation_results.md  phase_1_report.md  phase_1_results.md  phase_2_round_1_report.md  phase_2_round_1_results.md
docs/templates/: round_template.md
inference/: __init__.py  demo.py  trt_pipeline.py
inference/cpp/: CMakeLists.txt
inference/cpp/include/: detection.hpp  tracker.hpp  trt_pipeline.hpp
inference/cpp/src/: demo.cpp  tracker.cpp  trt_pipeline.cpp
inference/cpp/tests/: test_tracker.cpp
inference/tracker/: __init__.py  basetrack.py  byte_tracker.py  kalman_filter.py  matching.py  smoother.py
research/: README.md
research/surveys/: alt_detector_architectures.md  detection_enhancements.md  kd_upgrade_recommendation.md  kd_upgrade_verification.md
scripts/: _debug_a2b_kd.sh  _diag_deim_dets.sh  _export_deim_onnx.py  _r2_audit_coverage_schema.json  _r2_carry_forward_schema.json  _r2_component_decision_schema.json  _r2_decide_precision.py  _r2_decision_schema.json  _r2_schema_utils.py  _r2_schemas_test.py  _r2_verify.py  _remote_deim_eval.sh  _smoke_cpb_ablation_runner.py  _smoke_decision_gates.py  _smoke_hn_ablation_runner.py  _tsm_activation_schema.json  annotate_bstld.py  annotate_s2tld.py  convert_bstld.py  convert_lisa.py  convert_s2tld.py  download_data.py  export_deim.sh  export_yolo.sh  measure_flicker.py  merge_datasets.py  run_demos.sh  run_demos_all_engines.sh  run_demos_all_engines_tracker.sh  setup_reverse_tunnel.sh  strip_yolo26_head.py  tailscale_diagnose.sh  tailscale_disable_ipv6.sh  tailscale_fix_ipv4.sh  train_deim.sh  train_yolov13.sh  validate_flicker_reduction.py  yolo_to_coco.py
scripts/dataset/: yolo_to_coco.py
scripts/eval/: _parse_deim_per_class.py  _remote_deim_eval.sh  test_parse_deim_per_class.py
scripts/export/: _export_deim_onnx.py
scripts/ops/: setup_reverse_tunnel.sh
scripts/tracker/: measure_flicker.py  validate_flicker_reduction.py
scripts/training/: train_deim.sh  train_yolov13.sh
tests/: test_tracker.py
(+24 files in other folders)
