[project]
name = "traffic-light"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.0.0",
    "onnx>=1.21.0",
    "onnx-graphsurgeon>=0.6.1",
    "onnxruntime>=1.24.4",
    "onnxslim>=0.1.91",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.35",
]

[project.optional-dependencies]
# TensorRT inference on Jetson/Orin (aarch64) — install via JetPack SDK
orin = ["pycuda>=2024.1"]
# ONNX Runtime for development/testing on x86/Apple Silicon
onnx = ["onnxruntime>=1.18.0"]
